# robocar

./: .gitignore  02_phase_1_powertrain.md  03_phase_2_odometry.md  04_phase_3_teleop.md  09_phase_8_autonomy.md  CLAUDE.md  README.md
_archive/original_plan/: 00_README.md  01_parts_list.md  05_phase_4_imu.md  06_phase_5_camera.md  07_phase_6_lidar.md  08_phase_7_slam.md  README.md
_engineering/: README.md  device_contracts.md  engineering_decisions.md  power_budget.md  products_to_buy.md  safety.md
_manufacturer_device/: README.md  mentorpi_m1_hardware.md
_manufacturer_device/robot_reference/: 00. Important Notice Before Using the MentorPi Robot.txt  README.md
_manufacturer_device/robot_reference/10. Lidar Lesson/: Lesson 1 Lidar Introduction.txt  Lesson 2 Lidar Working and Ranging Principle.txt
_manufacturer_device/rrc_lite_controller/: README.md
firmware/: CMakeLists.txt  README.md
firmware/src/: incremental_pid.c  incremental_pid.h  main.c  mecanum_kinematics.c  mecanum_kinematics.h  quadrature_encoder.c  quadrature_encoder.h  tb6612.c  tb6612.h  wheel_control.c  wheel_control.h  wheel_pid.c  wheel_pid.h
phase_1_powertrain/: README.md  bom.md  wiring_diagram.md
phase_2_odometry/: README.md  bom.md  wiring_diagram.md
phase_3_teleop/: README.md  bom.md  wiring_diagram.md
phase_4_imu/: README.md  bom.md  wiring_diagram.md
phase_5_camera/: README.md  bom.md  wiring_diagram.md
phase_6_lidar/: README.md  bom.md  wiring_diagram.md
phase_7_slam/: README.md  bom.md  wiring_diagram.md
phase_8_autonomy/: README.md  bom.md  wiring_diagram.md
(+57 files in other folders)
